# automated-assignment-grading

./: .dockerignore  .gitignore  AUTHORS  ChangeLog  Dockerfile  Pipfile  README.md  regex_test.py  requirements.txt  setup.py
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  enum.data.json  enum.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  re.data.json  re.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
aaa/: __main__.py  main.py
aaa/core/: assignment.py  (+4 more)
automated_assignment_assessment.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt
resources/: CMakeLists.txt  assignment_list.json  hello.txt  test-cpp_boukhary.txt  test-cpp_rubric.txt
resources/CMPS-1044/: students.json  students.txt
resources/CMPS-1044/prog2/: prog2_chris473.txt  prog2_interactive_input.txt  prog2_rubric.json  prog2_rubric.txt  prog2_weights.txt
resources/CMPS-3410/: students.txt
resources/CMPS-3410/test-cpp/: test-cpp_briceallard.txt  test-cpp_rubric.txt  test-cpp_shadyboukhary.txt  test-cpp_weights.txt
shared/: assignment_list.json  prog2_input.txt  prog2_rubric.json  prog3_rubric.json  students_1044.json
src/: CMPS-3410_test-cpp_assignment_report.xlsx  main.py
tmp/: students_1044.json
(+53 files in other folders)
