cmake_minimum_required (VERSION 2.6)
project (REPLACE_PROJECT_NAME)

set(EXECUTABLE_NAME REPLACE_EXECUTABLE_NAME)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY REPLACE_OUTPUT_DIRECTORY)
include_directories(REPLACE_INCLUDE_DIRS)

file(GLOB source REPLACE_SOURCE_GLOB)
add_executable(${EXECUTABLE_NAME} ${source})
